--- a/package.json
+++ b/package.json
@@ -1,19 +1,21 @@
 {
-  "name": "oist_optinist",
+  "name": "optinist",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@mrblenny/react-flow-chart": "^0.0.14",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
-    "@types/react": "^17.0.0",
+    "@types/react": "^17.0.19",
     "@types/react-dom": "^17.0.0",
     "flexlayout-react": "^0.5.12",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "styled-components": "^5.3.0",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
