add conda installation

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -16,6 +16,16 @@ RUN /bin/bash -c "pip install --no-cache-dir -r requirements.txt"
 RUN git clone https://github.com/flatironinstitute/CaImAn /CaImAn
 RUN cd /CaImAn && pip install -e .
 
+# install conda
+RUN mkdir -p ~/miniconda3
+RUN wget https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh -O ~/miniconda3/miniconda.sh
+RUN bash ~/miniconda3/miniconda.sh -b -u -p ~/miniconda3 
+RUN rm -rf ~/miniconda3/miniconda.sh
+
+ENV PATH $PATH:/root/miniconda3/bin
+RUN conda upgrade -y --all
+RUN conda install -n base -c conda-forge mamba
+
 RUN apt update && \
     apt-get install -y libgl1-mesa-dev
 
