--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ future
 pynwb
 psutil
 nbstripout
-snakemake
+# snakemake==1.4.1
 # git+https://github.com/ShogoAkiyama/snakemake@main#egg=snakemake
 jinja2==3.0.3
 suite2p==0.10.3
