--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,31 +16,35 @@
     "@types/colormap": "^2.3.1",
     "@types/jest": "^26.0.15",
     "@types/node": "^16.0.0",
-    "@types/react": "^17.0.19",
+    "@types/react": "^18.0.28",
     "@types/react-color": "^3.0.6",
-    "@types/react-dom": "^17.0.0",
+    "@types/react-dom": "^18.0.11",
+    "assert": "^2.0.0",
     "axios": "^0.21.1",
+    "buffer": "^6.0.3",
     "colormap": "^2.3.2",
-    "flexlayout-react": "^0.5.12",
+    "flexlayout-react": "^0.7.7",
     "notistack": "^2.0.3",
     "plotly.js": "^2.6.0",
-    "react": "^17.0.2",
+    "react": "^18.2.0",
+    "react-app-rewired": "^2.2.1",
     "react-color": "^2.19.3",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
-    "react-dom": "^17.0.2",
+    "react-dom": "^18.2.0",
     "react-flow-renderer": "^9.6.6",
     "react-linear-gradient-picker": "^2.0.2",
     "react-plotlyjs-ts": "^2.2.2",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
+    "stream-browserify": "^3.0.0",
     "styled-components": "^5.3.0",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "BUILD_PATH='./build' react-scripts --openssl-legacy-provider build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start --scripts-version react-scripts",
+    "build": "BUILD_PATH='./build' react-app-rewired build --scripts-version react-scripts",
+    "test": "react-app-rewired test --scripts-version react-scripts",
     "test:ci": "CI=true react-scripts test",
     "eject": "react-scripts eject",
     "lint-staged": "lint-staged"
