--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,7 +51,7 @@ dependencies = [
 [project.optional-dependencies]
 dev = [
   "black",
-  "flake8",
+  "flake8==6.1.*",
   "isort",
   "build",
   "twine",
