--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,10 +33,11 @@
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
-    "react-flow-renderer": "^9.6.6",
     "react-linear-gradient-picker": "^2.0.2",
     "react-plotlyjs-ts": "^2.2.2",
+    "react-redux": "^8.1.2",
     "react-scripts": "^5.0.1",
+    "reactflow": "^11.8.2",
     "stream-browserify": "^3.0.0",
     "styled-components": "^5.3.0",
     "typescript": "^4.1.2",
