--- a/studio/app/optinist/wrappers/caiman/params/caiman_cnmfe.yaml
+++ b/studio/app/optinist/wrappers/caiman/params/caiman_cnmfe.yaml
@@ -5,8 +5,8 @@ K: 4 # upper bound on number of components per patch, in general None
 gSig: [3, 3] # gaussian width of a 2D gaussian kernel, which approximates a neuron
 gSiz: [13, 13] # average diameter of a neuron, in general 4*gSig+1
 merge_thr: .7 # merging threshold, max correlation allowed
-# rf: 40 # half-size of the patches in pixels. e.g., if rf=40, patches are 80x80
-stride_cnmf: 20 # amount of overlap between the patches in pixels
+rf: 40 # half-size of the patches in pixels. e.g., if rf=40, patches are 80x80
+stride: 20 # amount of overlap between the patches in pixels
 #                     (keep it at least large as gSiz, i.e 4 times the neuron size gSig)
 tsub: 2 # downsampling factor in time for initialization,
 #                     increase if you have memory problems
@@ -15,7 +15,7 @@ ssub: 1 # downsampling factor in space for initialization,
 #                     you can pass them here as boolean vectors
 low_rank_background: null # None leaves background of each patch intact,
 #                     True performs global low-rank approximation if gnb>0
-gnb: 0 # number of background components (rank) if positive,
+nb: 0 # number of background components (rank) if positive,
 #                     else exact ring model with following settings
 #                         gnb= 0: Return background as b and W
 #                         gnb=-1: Return full rank background B
