--- a/studio/config/docker/Dockerfile
+++ b/studio/config/docker/Dockerfile
@@ -4,7 +4,8 @@ WORKDIR /app
 
 RUN mkdir -p /root/miniconda3 && \
     apt-get --allow-releaseinfo-change update && \
-    apt-get install --no-install-recommends -y gcc g++ libgl1 libgl1-mesa-dev && \
+    apt-get install --no-install-recommends -y gcc g++ libgl1 libgl1-mesa-dev libopencv-dev && \
+    apt-get install --no-install-recommends -y procps iproute2 less vim && \
     apt-get install --no-install-recommends -y wget && \
     wget -q https://repo.anaconda.com/miniconda/Miniconda3-py39_4.12.0-Linux-x86_64.sh -O ~/miniconda3/miniconda.sh && \
     apt-get purge wget -y && apt-get autoremove -y && apt-get clean && \
@@ -23,5 +24,8 @@ COPY main.py pyproject.toml ./
 
 RUN pip3 install --no-cache-dir --upgrade pip && \
     pip3 install --no-cache-dir -e .
+
+RUN echo 'alias ll="ls -la"' >> ~/.bashrc
+RUN echo 'set nu ic hls nowrap ts=4 sw=4 | syntax on' >> ~/.vimrc
 
 EXPOSE 8000
