modify isort black

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,7 +45,7 @@ dependencies = [
   "pyrebase4==4.7.1",
   "pydantic[email]",
   "pydantic[dotenv]",
-  "python-jose[cryptography]"
+  "python-jose[cryptography]",
   "filelock",
 ]
 
