[52] add database settings and models

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -23,3 +23,5 @@ services:
     ports:
       - "3000:3000"
     command: ash -c 'yarn install && yarn start'
+    environment:
+      TZ: Asia/Tokyo
