[70, 81] FE: add workspaces page

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,7 @@
     "@mui/icons-material": "^5.4.1",
     "@mui/lab": "^5.0.0-alpha.68",
     "@mui/material": "^5.4.1",
-    "@mui/x-data-grid": "^5.5.1",
+    "@mui/x-data-grid": "^6.11.1",
     "@reduxjs/toolkit": "^1.6.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -16,14 +16,17 @@
     "@types/colormap": "^2.3.1",
     "@types/jest": "^26.0.15",
     "@types/node": "^16.0.0",
+    "@types/qs": "^6.9.7",
     "@types/react": "^17.0.19",
     "@types/react-color": "^3.0.6",
     "@types/react-dom": "^17.0.0",
     "axios": "^0.21.1",
     "colormap": "^2.3.2",
     "flexlayout-react": "^0.5.12",
+    "moment": "^2.29.4",
     "notistack": "^2.0.3",
     "plotly.js": "^2.6.0",
+    "qs": "^6.11.2",
     "react": "^17.0.2",
     "react-color": "^2.19.3",
     "react-dnd": "^16.0.1",
