--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,9 +1,9 @@
-sphinx>=4.3.0,<4.6.0
+sphinx==7.1.2
 sphinxcontrib-apidoc
 sphinx_rtd_theme
 sphinx-prompt
 sphinx-autodoc-typehints
-sphinx-copybutton==0.5.0
+sphinx-copybutton==0.5.2
 sphinx-autobuild==2021.3.14
 myst-parser
 sphinx-pyproject
