--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,13 +64,13 @@ dev = [
   "pre-commit",
 ]
 doc = [
-  "sphinx>=4.3.0,<4.6.0",
+  "sphinx==7.1.2",
   "sphinxcontrib-apidoc",
   "sphinx_rtd_theme",
   "sphinx-prompt",
   "sphinx-pyproject",
   "sphinx-autodoc-typehints",
-  "sphinx-copybutton==0.5.0",
+  "sphinx-copybutton==0.5.2",
   "sphinx-autobuild==2021.3.14",
   "myst-parser",
 ]
