--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,6 +7,7 @@ repos:
     rev: v4.4.0
     hooks:
     -   id: check-added-large-files
+        exclude: frontend/build
     -   id: check-toml
     -   id: check-yaml
         args:
