fix errors on built package

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -108,6 +108,7 @@ studio = [
   "app/common/core/snakemake/snakemake.yaml",
   "app/*/wrappers/**/*.yaml",
   "app/Snakefile",
+  "config/*.yaml",
 ]
 
 [tool.isort]
