--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.4.1",
@@ -19,28 +20,32 @@
     "@types/react": "^17.0.19",
     "@types/react-color": "^3.0.6",
     "@types/react-dom": "^17.0.0",
+    "assert": "^2.1.0",
     "axios": "^0.21.1",
+    "buffer": "^6.0.3",
     "colormap": "^2.3.2",
     "flexlayout-react": "^0.5.12",
-    "notistack": "^2.0.3",
+    "notistack": "^3.0.1",
     "plotly.js": "^2.6.0",
-    "react": "^17.0.2",
+    "react": "18.2.0",
+    "react-app-rewired": "^2.2.1",
     "react-color": "^2.19.3",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
-    "react-dom": "^17.0.2",
-    "react-flow-renderer": "^10.3.17",
+    "react-dom": "18.2.0",
     "react-linear-gradient-picker": "^2.0.2",
     "react-plotlyjs-ts": "^2.2.2",
-    "react-redux": "^7.2.9",
+    "react-redux": "^8.1.2",
     "react-router-dom": "^6.6.2",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
+    "reactflow": "^11.8.3",
+    "stream-browserify": "^3.0.0",
     "styled-components": "^5.3.0",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-app-rewired start --scripts-version react-scripts",
     "build": "BUILD_PATH='./build' react-scripts --openssl-legacy-provider build",
     "test": "react-scripts test",
     "test:ci": "CI=true react-scripts test",
