--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,9 @@
 {
   "name": "optinist",
   "version": "0.1.0",
+  "engines": {
+    "node": ">=20.0.0"
+  },
   "private": true,
   "dependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
