--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -16,7 +16,7 @@ services:
       TZ: Asia/Tokyo
 
   studio-dev-fe:
-    image: node:16.20.1-alpine
+    image: node:20.8.0-alpine3.18
     working_dir: /app/frontend
     volumes:
       - ./frontend/:/app/frontend/
