add eslint and prettier

--- a/.vscode/settings.example.json
+++ b/.vscode/settings.example.json
@@ -10,6 +10,7 @@
       "source.organizeImports": true
     }
   },
+  "eslint.workingDirectories": ["frontend"],
   "flake8.args": ["--config=.flake8"],
   // NOTE: Uncomment following line and fix "optinist_dev" to your conda env name
   // "flake8.path": ["conda", "run", "-n", "optinist_dev", "python", "-m", "flake8"],
