--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -76,7 +76,12 @@
       }
     ],
     "no-unused-vars": "off",
-    "@typescript-eslint/no-unused-vars": ["warn"],
+    "@typescript-eslint/no-unused-vars": ["warn", {
+      "argsIgnorePattern": "^_",
+      "varsIgnorePattern": "^_",
+      "caughtErrorsIgnorePattern": "^_",
+      "destructuredArrayIgnorePattern": "^_"
+    }],
     "react/react-in-jsx-scope": "off",
     "no-relative-import-paths/no-relative-import-paths": [
       "error",
