--- a/frontend/package.json
+++ b/frontend/package.json
@@ -57,7 +57,8 @@
     "test": "react-app-rewired test",
     "test:ci": "CI=true react-app-rewired test",
     "eject": "react-scripts eject",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "prepare": "cd .. && husky install frontend/.husky && chmod ug+x frontend/.husky/pre-commit"
   },
   "browserslist": {
     "production": [
@@ -84,13 +85,15 @@
     "eslint-plugin-no-relative-import-paths": "^1.5.3",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "husky": "^8.0.3",
     "lint-staged": "^11.1.2",
     "prettier": "^3.0.3",
     "process": "^0.11.10"
   },
   "lint-staged": {
     "*.{ts,tsx}": [
-      "prettier --write"
+      "prettier --write",
+      "eslint --fix"
     ]
   },
   "resolutions": {
