--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,3 +1,10 @@
+# app config
+# PORT=3000 (default: 3000)
+
+# server endpoint
 REACT_APP_SERVER_HOST=localhost
 REACT_APP_SERVER_PORT=8000
+REACT_APP_SERVER_PROTO=http
+
+# running mode (true: standalone mode, false: multi-user mode)
 REACT_APP_IS_STANDALONE=true
