--- a/studio/config/docker/Dockerfile.dev
+++ b/studio/config/docker/Dockerfile.dev
@@ -17,10 +17,10 @@ RUN mkdir -p /root/miniconda3 && \
 
 ENV PATH $PATH:/root/miniconda3/bin
 
-COPY pyproject.toml .
-
 RUN pip3 install --no-cache-dir --upgrade pip && \
-    pip3 install --no-cache-dir -e '.[dev]'
+    pip3 install poetry
+
+COPY pyproject.toml poetry.lock ./
 
 RUN echo 'alias ll="ls -la"' >> ~/.bashrc
 RUN echo 'set nu ic hls nowrap ts=4 sw=4 | syntax on' >> ~/.vimrc
