update poetry lock

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -65,6 +65,7 @@ fastapi_pagination = "0.12.5"
 plotly = "5.15.0"
 kaleido = "0.2.1"
 filelock = "*"
+ruamel-yaml = "^0.18.5"
 
 [tool.poetry.group.dev]
 optional = true
