--- a/frontend/package.json
+++ b/frontend/package.json
@@ -46,6 +46,7 @@
     "react-router-dom": "^6.6.2",
     "react-scripts": "^5.0.1",
     "reactflow": "^11.8.3",
+    "reselect": "^4.1.8",
     "stream-browserify": "^3.0.0",
     "styled-components": "^5.3.0",
     "typescript": "^4.1.2",
