--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -26,3 +26,12 @@ repos:
     rev: 6.1.0
     hooks:
     -   id: flake8
+-   repo: https://github.com/codespell-project/codespell
+    rev: v2.1.0
+    hooks:
+    - id: codespell
+      name: 'Spell checker'
+      entry: codespell
+      language: python
+      exclude: '^studio/frontend/(build|node_modules)/'
+      args: ['--ignore-words', '.codespellignore']
