--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -27,9 +27,8 @@ repos:
     hooks:
     -   id: flake8
 -   repo: https://github.com/codespell-project/codespell
-    rev: v2.1.0
+    rev: v2.2.4
     hooks:
     -   id: codespell
-        name: 'Spell checker'
-        entry: codespell
-        language: python
+        additional_dependencies:
+        -   tomli
