--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,6 +63,7 @@ dev = [
   "build",
   "twine",
   "pre-commit",
+  "codespell",
 ]
 doc = [
   "sphinx==7.1.2",
@@ -121,5 +122,5 @@ env = [
 ]
 
 [tool.codespell]
-skip = './frontend/build,./frontend/node_modules),.*.lock$,.*log$,.*.egg-info$'
+skip = './frontend/build,./frontend/node_modules),.*.lock,.*log,.*.egg-info'
 ignore-words = '.codespellignore'
