--- a/pyproject.toml
+++ b/pyproject.toml
@@ -122,5 +122,5 @@ env = [
 ]
 
 [tool.codespell]
-skip = './frontend/build,./frontend/node_modules),.*.lock,.*log,.*.egg-info'
+skip = './frontend/build,./frontend/node_modules,.*.lock,.*log,.*.egg-info'
 ignore-words = '.codespellignore'
