--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,7 +26,7 @@
     "@types/react-color": "^3.0.6",
     "@types/react-dom": "^18.0.11",
     "assert": "^2.1.0",
-    "axios": "^0.21.1",
+    "axios": "^1.6.0",
     "buffer": "^6.0.3",
     "colormap": "^2.3.2",
     "flexlayout-react": "^0.5.12",
@@ -99,5 +99,10 @@
   },
   "resolutions": {
     "react-error-overlay": "6.0.11"
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "^axios$": "axios/dist/node/axios.cjs"
+    }
   }
 }
