--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,6 +1,6 @@
 sphinx==7.1.2
 sphinxcontrib-apidoc
-sphinx_rtd_theme
+sphinx_rtd_theme==1.3.0
 sphinx-prompt
 sphinx-autodoc-typehints
 sphinx-copybutton==0.5.2
