--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,8 +33,9 @@ include = [
   "studio/app/*/wrappers/**/*.yaml",
   "studio/app/Snakefile",
   "studio/config/*.yaml",
+  "sample_data/*",
 ]
-exclude = ["studio/tests/*", "conda.env.*"]
+exclude = ["studio/tests/*", "studio/test_data/*", "conda.env.*"]
 
 [tool.poetry.dependencies]
 python = "^3.8.1"
@@ -74,8 +75,6 @@ optional = true
 black = "*"
 flake8 = "6.1.*"
 isort = "*"
-build = "<0.11.0,>=0.10.0"
-twine = "*"
 pre-commit = "*"
 codespell = "*"
 
@@ -85,7 +84,7 @@ optional = true
 [tool.poetry.group.doc.dependencies]
 sphinx = "7.1.2"
 sphinxcontrib-apidoc = "*"
-sphinx-rtd-theme = "*"
+sphinx-rtd-theme = "^1.3.0"
 sphinx-prompt = "*"
 sphinx-autodoc-typehints = "*"
 sphinx-copybutton = "0.5.2"
