--- a/studio/app/optinist/wrappers/optinist/basic_neural_analysis/params/eta.yaml
+++ b/studio/app/optinist/wrappers/optinist/basic_neural_analysis/params/eta.yaml
@@ -1,9 +1,9 @@
 transpose_x: True
 transpose_y: False
 
-target_index: 1
+event_col_index: 1
 
 trigger_type: 'up' # ['up', 'down', 'cross']
 trigger_threshold: 0
-start_time: -10
-end_time: 10
+pre_event: -10
+post_event: 10
