--- a/frontend/package.json
+++ b/frontend/package.json
@@ -74,6 +74,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.23.5",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@babel/plugin-transform-private-property-in-object": "^7.23.3",
     "@babel/runtime": "^7.23.2",
