--- a/docker-compose.build.yml
+++ b/docker-compose.build.yml
@@ -5,7 +5,7 @@ services:
     image: node:20.8.0-alpine3.18
     working_dir: /app/frontend
     volumes:
-      - ./frontend/:/app/frontend/
+      - ./frontend/:/app/frontend/:cached
     command: ash -c 'yarn install && yarn build'
     environment:
       TZ: Asia/Tokyo
