--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -21,7 +21,7 @@ services:
     image: node:20.8.0-alpine3.18
     working_dir: /app/frontend
     volumes:
-      - ./frontend/:/app/frontend/
+      - ./frontend/:/app/frontend/:cached
     ports:
       - "127.0.0.1:3000:3000"
     command: ash -c 'yarn install && yarn start'
