add .codespellignore setting

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -28,5 +28,6 @@ repos:
     rev: v2.2.4
     hooks:
     -   id: codespell
+        args: [-I, .codespellignore]
         additional_dependencies:
         -   tomli
