--- a/studio/app/optinist/microscopes/.gitignore
+++ b/studio/app/optinist/microscopes/.gitignore
@@ -1,7 +1,8 @@
 dll/
-testdata/
 
-/*.out.json
-/*.out.tiff
-/*.out.*.json
-/*.out.*.tiff
+/tests/test_data/
+/tests/test_output/
+/tests/*.out.json
+/tests/*.out.tiff
+/tests/*.out.*.json
+/tests/*.out.*.tiff
