--- a/studio/app/Snakefile
+++ b/studio/app/Snakefile
@@ -17,7 +17,14 @@ else:
 
 
     for rule_name, details in config["rules"].items():
-        if details["type"] in [FILETYPE.IMAGE, FILETYPE.CSV, FILETYPE.BEHAVIOR, FILETYPE.HDF5, FILETYPE.MATLAB]:
+        if details["type"] in [
+            FILETYPE.IMAGE,
+            FILETYPE.CSV,
+            FILETYPE.BEHAVIOR,
+            FILETYPE.HDF5,
+            FILETYPE.MATLAB,
+            FILETYPE.MICROSCOPE,
+        ]:
             rule:
                 input:
                     SmkUtils.input(details)
