--- a/pyproject.toml
+++ b/pyproject.toml
@@ -75,7 +75,7 @@ xmltodict = "*"
 optional = true
 
 [tool.poetry.group.dev.dependencies]
-black = "*"
+black = "23.11"
 flake8 = "6.1.*"
 isort = "*"
 pre-commit = "*"
