--- a/studio/config/.env.example
+++ b/studio/config/.env.example
@@ -10,3 +10,6 @@ IS_STANDALONE=True
 # MYSQL_DATABASE=studio
 # MYSQL_USER=studio_db_user
 # MYSQL_PASSWORD=studio_db_password
+
+# NOTE: Uncomment and set your own values when using .nd2 or .oir reader
+# MICROSCOPES_LIBRARY_DIR="/app/studio/app/optinist/microscopes/dll"
