--- a/studio/config/logging.multiuser.yaml
+++ b/studio/config/logging.multiuser.yaml
@@ -12,11 +12,19 @@ handlers:
     class: logging.StreamHandler
     level: DEBUG
     formatter: default
+  rotating_file:
+    class: logging.handlers.TimedRotatingFileHandler
+    level: DEBUG
+    formatter: default
+    filename: logs/studio.log
+    when: midnight
+    interval: 1
+    backupCount: 365
 loggers:
   snakemake:
     level: INFO
-    handlers: [console]
+    handlers: [rotating_file]
     propagate: false
 root:
   level: INFO
-  handlers: [console]
+  handlers: [console, rotating_file]
