add rule name for each rules

--- a/studio/app/Snakefile
+++ b/studio/app/Snakefile
@@ -26,6 +26,8 @@ else:
             FILETYPE.MICROSCOPE,
         ]:
             rule:
+                name:
+                    rule_name
                 input:
                     SmkUtils.input(details)
                 output:
@@ -36,6 +38,8 @@ else:
                     f"{DIRPATH.APP_DIR}/common/core/rules/data.py"
         else:
             rule:
+                name:
+                    rule_name
                 input:
                     SmkUtils.input(details)
                 output:
