--- a/studio/app/Snakefile
+++ b/studio/app/Snakefile
@@ -1,9 +1,9 @@
 from studio.app.common.core.snakemake.smk_utils import SmkUtils
 from studio.app.common.core.utils.filepath_creater import join_filepath
 from studio.app.optinist.core.edit_ROI import EditRoiUtils
-from studio.app.const import FILETYPE
 from studio.app.dir_path import DIRPATH
 
+from studio.app.common.core.workflow.workflow import NodeType
 
 if config.get('type') == "EDIT_ROI":
     rule edit_ROI:
@@ -17,14 +17,7 @@ else:
 
 
     for rule_name, details in config["rules"].items():
-        if details["type"] in [
-            FILETYPE.IMAGE,
-            FILETYPE.CSV,
-            FILETYPE.BEHAVIOR,
-            FILETYPE.HDF5,
-            FILETYPE.MATLAB,
-            FILETYPE.MICROSCOPE,
-        ]:
+        if NodeType.check_nodetype_from_filetype(details["type"]) == NodeType.DATA:
             rule:
                 name:
                     rule_name
