update settings for multiuser mode

--- a/docker-compose.dev.multiuser.yml
+++ b/docker-compose.dev.multiuser.yml
@@ -1,6 +1,22 @@
 version: "3"
 
 services:
+  db:
+    image: mysql:8.4
+    ports:
+      - "127.0.0.1:13306:3306"
+    env_file:
+      - studio/config/.env
+    volumes:
+      - db_data:/var/lib/mysql
+    environment:
+      TZ: Asia/Tokyo
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "127.0.0.1"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
+
   studio-dev-be:
     build:
       context: .
@@ -14,11 +30,18 @@ services:
       - ../optinist-docker-volumes/studio_data/:/app/studio_data
     ports:
       - "127.0.0.1:8000:8000"
-    command: poetry run python main.py --reload --host 0.0.0.0 --port 8000
+    command: >
+        bash -c "
+          alembic upgrade head &&
+          poetry run python main.py --reload --host 0.0.0.0 --port 8000
+        "
     environment:
       PYTHONPATH: /app/
       TZ: Asia/Tokyo
       OPTINIST_DIR: /app/studio_data
+    depends_on:
+      db:
+        condition: service_healthy
 
   studio-dev-fe:
     image: node:20.8.0-alpine3.18
@@ -30,3 +53,6 @@ services:
     command: ash -c 'yarn install && yarn start'
     environment:
       TZ: Asia/Tokyo
+
+volumes:
+  db_data:
