--- a/studio/config/.env.example
+++ b/studio/config/.env.example
@@ -5,8 +5,9 @@ REFRESH_TOKEN_EXPIRE_MINUTES=1440 # 24 hours
 IS_STANDALONE=True
 
 # NOTE: Uncomment and set your own values when using for multiple user
-# MYSQL_SERVER=db
+# MYSQL_SERVER=db:3306
 # MYSQL_ROOT_PASSWORD=db_root_password
 # MYSQL_DATABASE=studio
 # MYSQL_USER=studio_db_user
 # MYSQL_PASSWORD=studio_db_password
+# ECHO_SQL=False
