--- a/studio/app/optinist/wrappers/suite2p/conda/suite2p.yaml
+++ b/studio/app/optinist/wrappers/suite2p/conda/suite2p.yaml
@@ -1,10 +1,10 @@
 dependencies:
   - python=3.8
   - pip
+  - pyqt=5.15.*
+  - pyqt5-sip=12.11.*
   - pip:
     - numpy==1.23.*
-    - PyQt5==5.15.*
-    - PyQt5-sip==12.11.*
     - pyqtgraph==0.12.*
     - pandas==1.5.*
     - suite2p==0.10.3
