--- a/pyproject.toml
+++ b/pyproject.toml
@@ -120,6 +120,11 @@ profile = "black"
 pythonpath = "."
 testpaths = "studio/tests"
 env = ["OPTINIST_DIR=studio/test_data"]
+filterwarnings = [
+    "ignore:pkg_resources is deprecated as an API:DeprecationWarning",
+    "ignore:Deprecated call to `pkg_resources.declare_namespace:DeprecationWarning",
+    "ignore:invalid escape sequence :DeprecationWarning",
+]
 
 [tool.codespell]
 skip = './frontend/build,./frontend/node_modules,./docs/_build,*.lock,*log,*.egg-info'
