Supports mode switching for testing by environment - Switch between test_backend (lighter process) and test_backend_full (heavier process)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -126,8 +126,8 @@ filterwarnings = [
     "ignore:invalid escape sequence :DeprecationWarning",
 ]
 markers = [
-    "snakemake_executor_lccd",
-    "snakemake_executor_suite2p",
+    "lighter_processing",
+    "heavier_processing",
 ]
 
 [tool.codespell]
