--- a/frontend/package.json
+++ b/frontend/package.json
@@ -81,6 +81,7 @@
     "@babel/runtime": "^7.23.2",
     "@types/plotly.js": "^2.12.30",
     "@types/react-redux": "^7.1.30",
+    "@types/redux-mock-store": "^1.0.6",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
     "@typescript-eslint/parser": "^6.10.0",
     "eslint": "^8.53.0",
@@ -94,7 +95,8 @@
     "husky": "^8.0.3",
     "lint-staged": "^15.0.2",
     "prettier": "^3.0.3",
-    "process": "^0.11.10"
+    "process": "^0.11.10",
+    "redux-mock-store": "^1.5.4"
   },
   "lint-staged": {
     "*.{ts,tsx}": [
