--- a/frontend/package.json
+++ b/frontend/package.json
@@ -98,6 +98,7 @@
     "lint-staged": "^15.0.2",
     "prettier": "^3.0.3",
     "process": "^0.11.10",
+    "punycode": "^2.3.1",
     "redux-mock-store": "^1.5.4"
   },
   "lint-staged": {
