--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
     "moment": "^2.29.4",
     "notistack": "^3.0.1",
     "plotly.js": "^2.27.1",
+    "punycode": "^2.3.1",
     "qs": "^6.11.2",
     "react": "18.2.0",
     "react-app-rewired": "^2.2.1",
