improve frontend dotenv
- Change default value of API endpoint variable (from window.location)

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,7 +1,11 @@
 # app config
-# PORT=3000 (default: 3000)
+# # (default: 3000)
+# PORT=3000
 
 # server endpoint
+# (default: location.hostname)
 REACT_APP_SERVER_HOST=localhost
+# (default: location.port)
 REACT_APP_SERVER_PORT=8000
+# (default: location.protocol)
 REACT_APP_SERVER_PROTO=http
